--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,25 +1,47 @@
 <div class='main-nav'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
+    <div class='navbar navbar-light border'>
+
+        <div class='profile-block' [routerLink]='["/"]'>
+
+          <div class='profile-pic'> </div>
+
+
+          <div class='profile-block-info border'>
+            <p class="profile-name">
+              Ivan Richard Ugolole
+            </p>
+
+            <p class="profile-title">Full Stack Developer</p>
+
+          </div>
+
+        </div>
+
+        <div class='navbar-header border'>
+
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded' (click)='toggle()'>
                 <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
+                <span class='icon-bar icon-bar-override'></span>
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]='["/"]'>Ivan_Richard</a>
+
         </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
+
+        <div class='navbar-collapse collapse border' [ngClass]='{ "in": isExpanded }'>
             <ul class='nav navbar-nav'>
 
-                <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-home'></span> Home
+                <li  style="float: right;"[routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+                    <a  [routerLink]='["/"]' (click)='collapse()'>
+                        <span class='glyphicon glyphicon-home'></span> Project
                     </a>
                 </li>
 
-                
+                <li style="float: right;" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions] ='{exact: true}'>
+                  <a [routerLink]='["/"]' >
+                      <span class = "glyphicon glyphicon-home"> About me</span>
+                  </a>
+                </li>
             </ul>
         </div>
     </div>
