position router outlet output and adding padding both at the left and right

--- a/Ivan-Richard/ClientApp/src/app/app.component.css
+++ b/Ivan-Richard/ClientApp/src/app/app.component.css
@@ -1,3 +1,10 @@
+.content-box{
+  position:relative;
+  top:200px;
+  border: 1px solid black;
+  padding-left:30px;
+  padding-right:30px;
+}
 @media (max-width: 767px) {
   /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
   .body-content {
