--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,6 +2,7 @@ li .glyphicon {
     margin-right: 10px;
 }
 
+
 /* Highlighting rules for nav menu items */
 li.link-active a,
 li.link-active a:hover,
@@ -25,22 +26,27 @@ li.link-active a:focus {
 
  /*temporary border*/
 .border{
-  border: 2px solid black;
+  border:1px solid black;
 }
 
- .profile-block{
-  border:1px solid green;
-  overflow: auto;
+.navbar-nav{
+  position:relative;
+  float:right;
 }
 
-
+.profile-block{
+  position:relative;
+}
 
  .profile-block-info{
+  position:relative;
+  top:15px;
   float:left;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
  .profile-name {
+   position:relative;
   font-size: 10pt;
 }
 
@@ -49,20 +55,27 @@ li.link-active a:focus {
 }
 
  .profile-pic{
-  border-radius: 30px;
+  border-radius: 100px;
   border:1px solid black;
   float:left;
   width:100px;
   height:100px;
 }
-
-@media(max-width: 264px){
-  .profile-block-info{
-    margin-left: 0px;
-  }
+.navbar li {
+  font-size: 15px;
+  margin: 6px;
 }
 
-@media (min-width: 768px) {
+.navbar li a {
+  padding: 10px 16px;
+  border-radius: 4px;
+}
+
+@media(max-width: 264px){
+
+}
+
+@media (max-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
     .main-nav {
         width: 100%;
@@ -77,11 +90,13 @@ li.link-active a:focus {
         float: none;
     }
     .navbar-collapse {
-        border-top: 1px solid white;
+        border-top: 1px solid green;
         padding: 0px;
     }
     .navbar ul {
         float: none;
+        padding-left:20px;
+        padding-right:20px;
     }
     .navbar li {
         float: none;
