adding a show to the collapsed menu item

--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -22,7 +22,7 @@
             </button>
         </div>
 
-        <div class='navbar-collapse collapse border' [ngClass]='{ "in": isExpanded }'>
+        <div  class='navbar-collapse collapse border shadow' [ngClass]='{ "in": isExpanded }'>
             <ul class='nav navbar-nav '>
 
                 <li  [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
