--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -14,10 +14,12 @@ li.link-active a:focus {
 /* Keep the nav menu independent of scrolling and on top of other items */
 .main-nav {
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     z-index: 1;
+    background-color:white;
+
 }
 /*override the original color of the humbugger button*/
 .navbar-toggle .icon-bar {
@@ -26,7 +28,7 @@ li.link-active a:focus {
 
  /*temporary border*/
 .border{
-  border:1px solid black;
+
 }
 
 .navbar-nav{
@@ -76,10 +78,15 @@ li.link-active a:focus {
 }
 
 @media (max-width: 768px) {
-    /* On small screens, convert the nav menu to a vertical sidebar */
+  .shadow {
+    -webkit-box-shadow: 0 6px 4px -4px gainsboro;
+    -moz-box-shadow: 0 6px 4px -4px gainsboro;
+    box-shadow: 0 6px 4px -4px gainsboro;
+  }
+
+  /* On small screens, convert the nav menu to a vertical sidebar */
     .main-nav {
         width: 100%;
-        height: calc(25% - 20px);
     }
     .navbar {
         border-radius: 0px;
@@ -90,7 +97,6 @@ li.link-active a:focus {
         float: none;
     }
     .navbar-collapse {
-        border-top: 1px solid green;
         padding: 0px;
     }
     .navbar ul {
