--- a/Ivan-Richard/ClientApp/src/app/app.component.html
+++ b/Ivan-Richard/ClientApp/src/app/app.component.html
@@ -1,10 +1,15 @@
 <div class='container ' >
   <div class='row'>
-    <div class=''>
+    <div class='col-sm-12'>
       <app-nav-menu></app-nav-menu>
     </div>
-    <div class='content-box' >
-      <router-outlet></router-outlet>
+
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class='content-box' >
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
