--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,19 +1,15 @@
 <div class='container main-nav'>
-    <div class='navbar navbar-light border'>
+    <div class='navbar navbar-light '>
 
-        <div class='profile-block' [routerLink]='["/"]'>
-          <div >
+        <div class=' profile-block ' [routerLink]='["/"]' [routerLinkActive]='["home-active"]' [routerLinkActiveOptions] ='{exact: true}' >
             <img class="profile-pic" src="assets/ivan richard.jpeg">
-          </div>
-          <div class='profile-block-info border'>
-            <p class="profile-name">
-              Ivan Richard Ugolole
-            </p>
-            <p class="profile-title">Full Stack Developer</p>
-          </div>
+          <span class='profile-block-info '>
+            <p class="profile-name"> Ivan Richard Ugolole </p>
+            <p class="profile-title" > Full Stack Developer </p>
+          </span>
         </div>
 
-        <div class='navbar-header border'>
+        <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse'
             data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded'
             (click)='toggle()'>
@@ -24,17 +20,17 @@
             </button>
         </div>
 
-        <div  class='navbar-collapse collapse border shadow' [ngClass]='{ "in": isExpanded }'>
+        <div  class='navbar-collapse collapse shadow' [ngClass]='{ "in": isExpanded }'>
             <ul class='nav navbar-nav '>
 
                 <li  [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a  [routerLink]='["/"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-home'></span> Project
+                    <a  [routerLink]='["/projects"]' (click)='collapse()'>
+                        <span class='glyphicon glyphicon-home'></span> Projects
                     </a>
                 </li>
 
                 <li  [routerLinkActive]='["link-active"]' [routerLinkActiveOptions] ='{exact: true}'>
-                  <a [routerLink]='["/"]' >
+                  <a [routerLink]='["/about"]' (click)='collapse()'>
                       <span class = "glyphicon glyphicon-user"> </span> About me
                   </a>
                 </li>
