adding animation code with the needed code for the app.module.ts that active isLeft and isRight feature

--- a/Ivan-Richard/ClientApp/src/app/app.component.html
+++ b/Ivan-Richard/ClientApp/src/app/app.component.html
@@ -8,7 +8,11 @@
   <div class="row">
     <div class="col-sm-12">
       <div class='content-box' >
-        <router-outlet></router-outlet>
+        <!--Controlls how the router-outlet will renender the next required page,
+          in this case the rendering process adds an animations.-->
+        <main [@routeAnimations]='prepareRoute(outlet)' class="content">
+            <router-outlet #outlet="outlet"></router-outlet>
+        </main>
       </div>
     </div>
   </div>
