--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -17,13 +17,19 @@ li.link-active a:focus {
 /* Keep the nav menu independent of scrolling and on top of other items */
 .main-nav {
     position: fixed;
-    top: 50px;
+    top: 0px;
     left: 0;
     right: 0;
     z-index: 1;
     background-color:white;
-
 }
+
+.navbar{
+  position: relative;;
+  top: 0px;
+  padding-top: 50px;
+}
+
 /*override the original color of the humbugger button*/
 .navbar-toggle .icon-bar {
   background-color: black;
@@ -56,9 +62,11 @@ li.link-active a:focus {
 .home-active{
   border-bottom:3px solid #4189C7;
 
+  color: rgb(1, 89, 172);
+
   -webkit-box-shadow: 0 6px 4px -4px gainsboro;
-    -moz-box-shadow: 0 6px 4px -4px gainsboro;
-    box-shadow: 0 6px 4px -4px gainsboro;
+  -moz-box-shadow: 0 6px 4px -4px gainsboro;
+  box-shadow: 0 6px 4px -4px gainsboro;
 }
 
  .profile-block-info{
