adding a test grid in attemps to create first project structure

--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.css
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.css
@@ -1,3 +1,9 @@
 .border{
   border: 1px solid black;
 }
+
+.project-container{
+  border : 1px solid black;
+  height: 300px;
+  padding : 30px 30px 30px 30px;
+}
