--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
@@ -1,3 +1,23 @@
-<p class="">
-  Welcome to the projects section enjoy!
-</p>
+
+<!-- <button id="index">INDEX BUTTON</button> -->
+<!-- <div class="wrapper">
+    <a class="fancybox" href='assets/nature.jpg'>
+        <img style="width:250px; height:250px" src="assets/nature.jpg">
+    </a>
+ </div> -->
+
+
+<div class="row">
+  <div class="col-sm-4 project-container">
+
+  </div>
+
+  <div class="col-sm-4 project-container">
+
+  </div>
+
+  <div class="col-sm-4 project-container">
+
+  </div>
+
+</div>
