updating the container property to container-fluid and removing unnecessary lines

--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -8,3 +8,4 @@
     Third Sections
     This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
 </p>
+<footer-tab></footer-tab>
