--- a/Ivan-Richard/ClientApp/src/app/app.component.css
+++ b/Ivan-Richard/ClientApp/src/app/app.component.css
@@ -1,12 +1,13 @@
 .content-box{
   position:relative;
   top:200px;
-  padding-left:30px;
-  padding-right:30px;
 }
 
 .border{
   border: 1px solid black;
+}
+.padding-removel{
+  padding:0px !important;
 }
 
 @media (max-width: 767px) {
