--- a/Ivan-Richard/ClientApp/src/app/app.component.html
+++ b/Ivan-Richard/ClientApp/src/app/app.component.html
@@ -1,20 +1,19 @@
-<div class='container ' >
-  <div class='row'>
-    <div class='col-sm-12'>
+<div class='container-fluid' >
+  <div class='row' >
+    <div class='col-sm-12' >
       <app-nav-menu></app-nav-menu>
     </div>
   </div>
+</div>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <div class='content-box' >
-        <!--Controlls how the router-outlet will renender the next required page,
-          in this case the rendering process adds an animations.-->
-        <main [@routeAnimations]='prepareRoute(outlet)' class="content">
-            <router-outlet #outlet="outlet"></router-outlet>
-        </main>
-      </div>
+<div class="container-fluid content-box">
+    <div class="row">
+        <div class="col-sm-12">
+            <!--Controlls how the router-outlet will renender the
+              next required page,in this case the rendering process adds an animations.-->
+            <main [@routeAnimations]='prepareRoute(outlet)' class="content">
+                <router-outlet #outlet="outlet"></router-outlet>
+            </main>
+          </div>
     </div>
-  </div>
-
 </div>
