--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-<div class='container main-nav '>
+<div class='container-fluid main-nav '>
     <div class='navbar navbar-light '>
 
         <div class=' profile-block ' [routerLink]='["/"]'
