modifying the footer design to include new social media links, updating the nav-menu padding to percent from pixel

--- a/Ivan-Richard/ClientApp/src/app/footer/footer.component.css
+++ b/Ivan-Richard/ClientApp/src/app/footer/footer.component.css
@@ -60,6 +60,14 @@
   color: #2b55ff;
 }
 
+#myFooter .fa-github:hover{
+  color: black;
+ }
+
+ #myFooter .fa-github:focus{
+   color: black;
+ }
+
 #myFooter .fa-google-plus:hover{
   color:red;
 }
@@ -70,7 +78,6 @@
 
 #myFooter .fa-twitter:hover{
   color: #00aced;
-
 }
 
 #myFooter .fa-twitter:focus{
@@ -79,7 +86,7 @@
 
 
 
-/* CSS used for positioning the footers at the bottom of the page. */
+ CSS used for positioning the footers at the bottom of the page. */
 /* You can remove this. */
 
 html{
@@ -104,6 +111,7 @@ body{
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
 }
+
 
 .footer-aligment{
   padding:0px;
