--- a/Ivan-Richard/ClientApp/src/app/footer/footer.component.html
+++ b/Ivan-Richard/ClientApp/src/app/footer/footer.component.html
@@ -3,19 +3,17 @@
         <footer id="myFooter">
             <div class="container-fluid">
                 <ul>
-                    <li><a href="#">Company Information</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">Terms of service</a></li>
+                    <li><a href="#">About website</a></li>
+                    <li><a href="#">Contact me</a></li>
                 </ul>
-            <p class="footer-copyright">© 2016 Copyright Text</p>
+            <p class="footer-copyright">© 2016 Copyright Ivan-Richard</p>
             </div>
             <div class="footer-social">
                 <a href="#" class="social-icons"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="social-icons"><i class="fa fa-github"></i></a>
                 <a href="#" class="social-icons"><i class="fa fa-google-plus"></i></a>
                 <a href="#" class="social-icons"><i class="fa fa-twitter"></i></a>
             </div>
         </footer>
     </div>
 </div>
-
