--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -22,8 +22,8 @@ li.link-active a:focus {
     right: 0;
     z-index: 1;
     background-color:white;
-    padding-left:100px;
-    padding-right:100px;
+    padding-left:5%;
+    padding-right:5%;
 
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
