--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.css
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.css
@@ -7,3 +7,10 @@
   height: 300px;
   padding : 30px 30px 30px 30px;
 }
+
+.content-box{
+  padding-left:10%;
+  padding-right:10%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
