--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
@@ -7,7 +7,21 @@
  </div> -->
 
 
-<div class="row">
+<div class="row content-box">
+  <div class="col-sm-4 project-container">
+
+  </div>
+
+  <div class="col-sm-4 project-container">
+
+  </div>
+
+  <div class="col-sm-4 project-container">
+
+  </div>
+</div>
+
+<div class="row content-box">
   <div class="col-sm-4 project-container">
 
   </div>
