--- a/Ivan-Richard/ClientApp/src/app/footer/footer.component.html
+++ b/Ivan-Richard/ClientApp/src/app/footer/footer.component.html
@@ -9,10 +9,9 @@
             <p class="footer-copyright">© 2016 Copyright Ivan-Richard</p>
             </div>
             <div class="footer-social">
-                <a href="#" class="social-icons"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="social-icons"><i class="fa fa-github"></i></a>
-                <a href="#" class="social-icons"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="social-icons"><i class="fa fa-twitter"></i></a>
+                <a target="_blank"href="https://www.quora.com/profile/Ivan-Richard-Ugolole" class="social-icons"><i class="fa fa-quora"></i></a>
+                <a target="_blank" href="https://github.com/ugolole" class="social-icons"><i class="fa fa-github"></i></a>
+                <a target="_blank" href="https://twitter.com/UgololeIvan" class="social-icons"><i class="fa fa-twitter"></i></a>
             </div>
         </footer>
     </div>
