adding the google analytics explanation feature to the portfolio

--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -1,11 +1,102 @@
-<p>
-    First Section
-    The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+<div class="row content-box">
+  <div class="col-sm-12 home container">
+    <h2>Features and Resources</h2>
+  </div>
+</div>
+<div class="row content-box">
+  <div class="col-sm-4 feature-container">
+    <div class="feature">
+        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+        <p>
+          First Section
+          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
 
-    Second Section
-    The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+          Second Section
+          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
 
-    Third Sections
-    This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-</p>
+          Third Sections
+          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+        </p>
+    </div>
+  </div>
+  <div class="col-sm-4 feature-container">
+    <div class="feature">
+        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+        <p>
+          First Section
+          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+
+          Second Section
+          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+
+          Third Sections
+          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+        </p>
+    </div>
+  </div>
+
+  <div class="col-sm-4 feature-container">
+    <div class="feature">
+        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+        <p>
+          First Section
+          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+
+          Second Section
+          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+
+          Third Sections
+          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+        </p>
+    </div>
+  </div>
+</div>
+<div class="row content-box">
+    <div class="col-sm-4 feature-container">
+      <div class="feature">
+          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+          <p>
+            First Section
+            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+
+            Second Section
+            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+
+            Third Sections
+            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+          </p>
+      </div>
+    </div>
+    <div class="col-sm-4 feature-container">
+      <div class="feature">
+          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+          <p>
+            First Section
+            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+
+            Second Section
+            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+
+            Third Sections
+            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+          </p>
+      </div>
+    </div>
+
+    <div class="col-sm-4 feature-container">
+      <div class="feature">
+          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+          <p>
+            First Section
+            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
+
+            Second Section
+            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
+
+            Third Sections
+            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
+          </p>
+      </div>
+    </div>
+  </div>
 <footer-tab></footer-tab>
