adding the first row of the home page containing some of the technologies used in the site

--- a/Ivan-Richard/ClientApp/src/app/home/home.component.css
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.css
@@ -3,18 +3,29 @@
 }
 
 .feature{
-  border-radius: 30px;
-  box-shadow: 6px 6px 6px  gainsboro;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px  gainsboro;
+  border: 1px solid #efefef;
+}
+
+.feature-link{
+  outline: none;
+  text-decoration: none;
+  color:black;
+}
+
+.feature-content{
+  text-align: justify;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .content-box{
   padding-left:10%;
   padding-right:10%;
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
 .homepage-image{
   width: 99%;
-  border-radius: 30px;
+  border-radius: 10px;
 }
