--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -1,102 +1,51 @@
-<div class="row content-box">
-  <div class="col-sm-12 home container">
-    <h2>Features and Resources</h2>
+<div class="content-box">
+  <div class="row">
+    <div class="col-sm-12 home container">
+      <h2>Tools and Partners </h2>
+    </div>
   </div>
+
+  <div class="row ">
+    <div class="col-sm-4 feature-container">
+      <a class="feature-link" target="_blank"href="https://marketingplatform.google.com/about/analytics/">
+        <div class="feature">
+            <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
+            <div class="feature-content">
+              <p>Google Analytics is a web analytics service offered by Google
+                that tracks and reports website traffic, currently as a platform
+                inside the Google Marketing Platform brand.
+                Google launched the service in November 2005 after acquiring developer Urchine</p>
+            </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-sm-4 feature-container">
+        <a class="feature-link" target="_blank"href="https://expressjs.com">
+          <div class="feature">
+              <img class="homepage-image" src="assets/homepageImages/express-routing-logo.svg"/>
+              <div class="feature-content">
+                <p>Express is a minimal and flexible Node.js web application
+                  framework that provides a robust set of features for
+                  web and mobile applications.</p>
+              </div>
+          </div>
+        </a>
+    </div>
+
+    <div class="col-sm-4 feature-container">
+      <a class="feature-link" target="_blank"href="https://angular.io">
+        <div class="feature">
+            <img class="homepage-image" src="assets/homepageImages/angular-js-logo.svg"/>
+              <div class="feature-content">
+                <p>Angular is a TypeScript-based open-source web application
+                  framework led by the Angular Team at Google and by a community of individuals and corporations.
+                  Angular is a complete rewrite from the same team that built AngularJS</p>
+              </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
 </div>
-<div class="row content-box">
-  <div class="col-sm-4 feature-container">
-    <div class="feature">
-        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-        <p>
-          First Section
-          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-          Second Section
-          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-          Third Sections
-          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-        </p>
-    </div>
-  </div>
-  <div class="col-sm-4 feature-container">
-    <div class="feature">
-        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-        <p>
-          First Section
-          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-          Second Section
-          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-          Third Sections
-          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-        </p>
-    </div>
-  </div>
-
-  <div class="col-sm-4 feature-container">
-    <div class="feature">
-        <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-        <p>
-          First Section
-          The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-          Second Section
-          The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-          Third Sections
-          This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-        </p>
-    </div>
-  </div>
-</div>
-<div class="row content-box">
-    <div class="col-sm-4 feature-container">
-      <div class="feature">
-          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-          <p>
-            First Section
-            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-            Second Section
-            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-            Third Sections
-            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-          </p>
-      </div>
-    </div>
-    <div class="col-sm-4 feature-container">
-      <div class="feature">
-          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-          <p>
-            First Section
-            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-            Second Section
-            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-            Third Sections
-            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-          </p>
-      </div>
-    </div>
-
-    <div class="col-sm-4 feature-container">
-      <div class="feature">
-          <img class="homepage-image" src="assets/homepageImages/google-analytics-logo.svg"/>
-          <p>
-            First Section
-            The first section of the desktop version of the application contains my full name and the position that I hold include an picture of how I look, I am not sure if putting a picture of my face will affect my employment opportunity but I picture of there will be.
-
-            Second Section
-            The second section will contain a list of my projects, the project might contain an animation and once clicked you will be given the opportunity to see the projects’ in its full form through a fancyBox including a link to the GitHub repository and an instruction guid on how to run the project.
-
-            Third Sections
-            This is the footer of the website and will contain links to my social media pages and other important pieces of information that I believe I should put there.
-          </p>
-      </div>
-    </div>
-  </div>
 <footer-tab></footer-tab>
