--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="content-box">
   <div class="row">
     <div class="col-sm-12 home container">
-      <h2>Tools and Partners </h2>
+      <h2>Technologies Used </h2>
     </div>
   </div>
 
@@ -14,7 +14,8 @@
               <p>Google Analytics is a web analytics service offered by Google
                 that tracks and reports website traffic, currently as a platform
                 inside the Google Marketing Platform brand.
-                Google launched the service in November 2005 after acquiring developer Urchine</p>
+              </p>
+              <p>Google launched the service in November 2005 after acquiring developer Urchine</p>
             </div>
         </div>
       </a>
@@ -28,6 +29,14 @@
                 <p>Express is a minimal and flexible Node.js web application
                   framework that provides a robust set of features for
                   web and mobile applications.</p>
+                <p>
+                    The original author, TJ Holowaychuk, described it as a Sinatra-inspired server,
+                    meaning that it is relatively minimal with many features available as plugins.
+                </p>
+                <p>
+                  Express is the backend component of the MEAN stack,
+                  together with the MongoDB database software and AngularJS frontend framework.
+                </p>
               </div>
           </div>
         </a>
@@ -39,12 +48,31 @@
             <img class="homepage-image" src="assets/homepageImages/angular-js-logo.svg"/>
               <div class="feature-content">
                 <p>Angular is a TypeScript-based open-source web application
-                  framework led by the Angular Team at Google and by a community of individuals and corporations.
-                  Angular is a complete rewrite from the same team that built AngularJS</p>
+                  framework led by the Angular Team at Google and by a community of
+                   individuals and corporations.
+                </p>
+                <p>
+                  Angular is a complete rewrite from the same team that built AngularJS
+                </p>
               </div>
         </div>
       </a>
     </div>
+  </div>
+
+  <div class="row ">
+      <div class="col-sm-4 feature-container">
+        <a class="feature-link" target="_blank"href="https://nodejs.org/en/">
+          <div class="feature">
+              <img class="homepage-image" src="assets/homepageImages/node-js-logo.svg"/>
+              <div class="feature-content">
+                <p>Node.js is an open-source, cross-platform,
+                  JavaScript run-time environment that
+                  executes JavaScript code outside of a browser.</p>
+              </div>
+          </div>
+        </a>
+      </div>
   </div>
 
 </div>
