--- a/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Ivan-Richard/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
-<div class='container-fluid main-nav '>
-    <div class='navbar navbar-light '>
+<div class='container-fluid main-nav ' >
+    <div class='container navbar navbar-light ' >
 
         <div class=' profile-block ' [routerLink]='["/"]'
               [routerLinkActive]='["home-active"]'
