--- a/Ivan-Richard/ClientApp/src/app/home/home.component.css
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   box-shadow: 2px 2px 2px gainsboro;
   border: 1px solid #efefef;
-  height: 500px;
+  /* height: 500px; */
 }
 
 .feature:hover{
@@ -20,7 +20,6 @@
   text-decoration: none;
   color:black;
 }
-
 
 .feature-content{
   text-align: left;
