--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -16,6 +16,12 @@
                 inside the Google Marketing Platform brand.
               </p>
               <p>Google launched the service in November 2005 after acquiring developer Urchine</p>
+              <p>
+                  Google Analytics is the most widely used web analytics service on the web.
+                  Google Analytics provides an SDK that allows
+                  gathering usage data from iOS and Android app, known as Google Analytics for
+                  Mobile Apps.
+              </p>
             </div>
         </div>
       </a>
@@ -68,11 +74,61 @@
               <div class="feature-content">
                 <p>Node.js is an open-source, cross-platform,
                   JavaScript run-time environment that
-                  executes JavaScript code outside of a browser.</p>
+                  executes JavaScript code outside of a browser.
+                </p>
+                <p>
+                    Consequently, Node.js represents a "JavaScript everywhere" paradigm,
+                     unifying web application development around a
+                     single programming language, rather than different
+                     languages for server- and client-side scripts.
+                </p>
+                <p>
+                    Though .js is the standard filename extension for JavaScript code, the name "Node.js"
+                    does not refer to a particular file in this context and is merely the name of the product.
+                </p>
               </div>
           </div>
         </a>
       </div>
+
+      <div class="col-sm-4 feature-container">
+        <a class="feature-link" target="_blank"href="https://jquery.com/">
+          <div class="feature">
+              <img class="homepage-image" src="assets/homepageImages/query-javascript.svg"/>
+              <div class="feature-content">
+                <p>jQuery is a JavaScript library designed to simplify HTML DOM tree traversal and m
+                  anipulation, as well as event handling, CSS animation, and Ajax.
+                  It is free, open-source software using the permissive MIT License.
+                </p>
+
+              </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-sm-4 feature-container">
+        <a class="feature-link" target="_blank"href="https://dotnet.microsoft.com/apps/aspnet">
+          <div class="feature">
+              <img class="homepage-image" src="assets/homepageImages/asp-mvc-logo.svg"/>
+              <div class="feature-content">
+                <p>ASP.NET is an open-source server-side web application framework designed for
+                  web development to produce dynamic web pages developed by Microsoft to allow
+                  programmers to build dynamic web sites, applications and services.
+                </p>
+                <p>
+                    It was first released in January 2002 with version 1.0 of the .NET Framework,
+                    and is the successor to Microsoft's Active Server Pages (ASP) technology.
+                </p>
+                <p>
+                    ASP.NET is built on the Common Language Runtime (CLR), allowing programmers to
+                    write ASP.NET code using any supported .NET language.
+                </p>
+              </div>
+          </div>
+        </a>
+      </div>
+
+
   </div>
 
 </div>
