Final changes to the basic sphere fbx file

--- a/Ivan-Richard/ClientApp/src/app/home/home.component.html
+++ b/Ivan-Richard/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="content-box">
   <div class="row">
-    <div class="col-sm-12 home container">
+    <div class="col-sm-12 feature-container">
       <h2>Technologies Used </h2>
     </div>
   </div>
