--- a/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.css
+++ b/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.css
@@ -1,8 +1,18 @@
-.content-box{
+.content-box-fbx{
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
   width: 100%;
-  height: 97vh;
+  height: 60vh;
+}
+
+.content-box-fbx{
+  border-radius: 1px;
+  box-shadow: 2px 2px 2px gainsboro;
+  border: 1px solid #efefef;
+}
+
+.content-box-fbx:hover{
+  box-shadow: 4px 4px 4px gainsboro;
 }
 
 canvas{
@@ -12,4 +22,17 @@ canvas{
 .datGUI{
   position: absolute;
   right: 0px;
+}
+
+.content-box{
+  padding-left:15%;
+  padding-right:15%;
+}
+
+@media (max-width: 767px) {
+  /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+  .content-box {
+    padding-left:0%;
+    padding-right:0%;
+  }
 }
