--- a/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
@@ -1,13 +1,13 @@
-<a  [routerLink]='["/projects"]' >
-  <span class='glyphicon glyphicon-home'></span> back
-</a>
-<div class="row container">
-  <div class="col-sm-12">
-      <div class="content-box" style="border:1px solid black;" id="basicSphereEnv">
+<div class="row content-box">
+    <a  [routerLink]='["/projects"]' >
+      <span class='glyphicon glyphicon-home'></span> back
+    </a>
+  <div class="col-sm-12" >
+      <div class="content-box-fbx" id="basicSphereEnv">
           <div  class = 'datGUI'>  </div>
       </div>
   </div>
 </div>
 
-
+<footer-tab></footer-tab>
 
