--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="row content-box">
+<div class="content-box">
   <div class="row ">
       <div class="col-sm-4 project-container">
         <a class="project-link" [routerLink]='["/basicSphere"]'>
