--- a/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
@@ -1,7 +1,10 @@
 <div class="row content-box">
-    <a  [routerLink]='["/projects"]' >
-      <span class='glyphicon glyphicon-home'></span> back
-    </a>
+  <div class="col-sm-12">
+      <a  [routerLink]='["/projects"]' >
+        <span class='back glyphicon glyphicon-arrow-left'></span>
+      </a>
+  </div>
+
   <div class="col-sm-12" >
       <div class="content-box-fbx" id="basicSphereEnv">
           <div  class = 'datGUI'>  </div>
