--- a/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
+++ b/Ivan-Richard/ClientApp/src/app/projects/projects.component.html
@@ -10,6 +10,17 @@
           </div>
         </a>
       </div>
+
+      <div class="col-sm-4 project-container">
+          <a class="project-link" [routerLink]='["/dragon"]'>
+            <div class="project">
+                <img class="project-image" src="assets/projectPageImages/dragon.svg"/>
+                <div class="project-content">
+                  <p>Dragon Beast</p>
+                </div>
+            </div>
+          </a>
+        </div>
   </div>
 </div>
 
