adjusting the position of the back button for when the screen is small.

--- a/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
+++ b/ClientApp/src/app/projects/basicSphere/basicSphere.component.html
@@ -4,7 +4,9 @@
         <span class='back glyphicon glyphicon-arrow-left'></span>
       </a>
   </div>
+</div>
 
+<div class="row content-box">
   <div class="col-sm-12" >
       <div class="content-box-fbx" id="basicSphereEnv">
           <div  class = 'datGUI'>  </div>
