--- a/ClientApp/src/app/footer/footer.component.css
+++ b/ClientApp/src/app/footer/footer.component.css
@@ -78,7 +78,7 @@
 
 
 
- CSS used for positioning the footers at the bottom of the page. */
+/*CSS used for positioning the footers at the bottom of the page. */
 /* You can remove this. */
 
 html{
