--- a/ClientApp/src/app/footer/footer.component.html
+++ b/ClientApp/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-12 footer-aligment">
         <footer id="myFooter">
-            <div class="container-fluid">
+            <div class="container">
                 <ul>
                     <li><a href="#">About website</a></li>
                     <li><a href="#">Contact me</a></li>
